2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/file_source.rb: Renamed @hash to @config.
    * lib/fantasdic/sources/virtual_dictionary.rb: Likewise.
    * lib/fantasdic/sources/dictd_file.rb: Likewise.
    * lib/fantasdic/sources/edict_file.rb: Likewise.
    * lib/fantasdic/sources/dict_server.rb: Likewise.
    * lib/fantasdic/source_base.rb: Likewise.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Likewise.

2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/preferences.rb: Include the name of the dictionary in the
    configuration hash.
    * test/test_preferences.rb: Updated accordingly.

2008-08-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: When right-clicking on a selected word,
    in the menu, display the currently-selected dictionary first.

2008-08-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/about_dialog.rb: Gtk::AboutDialog#name= is deprecated in
    favor of Gtk::AboutDialog#program_name= so try to use program_name= if
    available or name= if not.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Likewise.

2008-08-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/binary_search.rb: Reusable binary search implementation.
    This implementation is aimed for files. It should be possible to use it for
    stardict dictionary files as well.

    * lib/fantasdic/file_source.rb: Code that is common to all file-based
    dictionary sources.
    * lib/fantasdic/sources/edict_file.rb: Use the above.
    * lib/fantasdic.rb: "Require" the new files.

    * lib/fantasdic/sources/dictd_file.rb: New dictionary source. This source
    can read dictionary files aimed for the dictd server, usally a .index file
    and a .dict file. Most of the time the .dict file will be compressed in
    a custom gzip and will have extension .dict.dz. This format is not supported
    yet. A class "DictzipReader" needs be written.

    * test/test_dictd_file.rb: