@@ -145,3 +145,17 @@ class Symbol
         Proc.new { |*args| args.shift.send(self, *args) }
     end
 end
+
+module Enumerable
+
+    def sum(identity = 0, &block)
+        return identity unless size > 0
+
+        if block_given?
+            map(&block).sum
+        else
+            inject { |sum, element| sum + element }
+        end
+    end
+
+end
